--- a/src/main/resources/com/example/project_da_eget_fx/hello-view.fxml
+++ b/src/main/resources/com/example/project_da_eget_fx/hello-view.fxml
@@ -1,50 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.control.TextArea?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.project_da_eget_fx.HelloController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_da_eget_fx.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText" text="Search for movies">
+    <Label fx:id="explainText" text="Search for a movie, add a rating and save it.">
         <font>
-            <Font size="26.0" />
+            <Font size="15.0" />
         </font></Label>
 
+    <HBox alignment="CENTER">
+        <TextField fx:id="textfieldTitle" prefHeight="26.0" prefWidth="400.0" promptText="Search by title" />
+    </HBox>
+    <Button onAction="#searchByTitle" text="Search"/>
 
-    <TextField fx:id="textfieldTitle" promptText="Search by title" />
-    <Button onAction="#searchByTitle" text="Search" />
+    <HBox alignment="CENTER">
+    <TextArea fx:id="searchResultTextArea" editable="false" opacity="0.7" prefHeight="200.0" prefWidth="600.0" />
+    </HBox>
+    <HBox alignment="CENTER">
+        <TextField fx:id="textFieldGiveRating" prefWidth="400.0" promptText="Rate the movie from 1 to 5 stars and save " />
 
-
-    <TextArea fx:id="searchResultTextArea" editable="false" prefHeight="200.0" prefWidth="300.0" />
-
-    <TextField fx:id="textFieldGiveRating" promptText="Rate the movie from 1 to 5 stars and save " />
+    </HBox>
     <Button onAction="#setRatingAndSave" text="Set rating and save" />
 
     <Label fx:id="confirmSave" text=" " />
 
-    <TextField fx:id="searchDatabaseYear" promptText="Search in database based on year of release " />
-    <Button onAction="#searchByYear" text="Search by Year" />
+    <HBox alignment="CENTER">
+        <TextField fx:id="searchDatabaseYear" prefWidth="400.0" promptText="Search in database based on year of release " />
 
-    <TextField fx:id="searchDatabaseActor" promptText="Search in database based on actor " />
-    <Button onAction="#searchByActor" text="Search by Actor" />
-
-    <TextField fx:id="searchDatabaseDirector" promptText="Search in database based on director" />
-    <Button onAction="#searchByDirector" text="Search by director" />
-
-    <TextField fx:id="searchDatabaseRating" promptText="Search in database based on rating" />
-    <Button onAction="#searchByRating" text="Search by rating" />
-
-
-
-
-
+    </HBox>
+    <HBox alignment="CENTER">
+        <TextField fx:id="searchDatabaseActor" prefWidth="400.0" promptText="Search in database based on actor " />
+    </HBox>
+    <HBox alignment="CENTER">
+        <TextField fx:id="searchDatabaseDirector" prefWidth="400.0" promptText="Search in database based on director" />
+    </HBox>
+    <HBox alignment="CENTER">
+        <TextField fx:id="searchDatabaseRating" prefWidth="400.0" promptText="Search in database based on rating" />
+    </HBox>
+    <Button onAction="#search" text="Search in database" />
 </VBox>
