--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -1,6 +1,5 @@
 /* styles.css */
 
-/* Apply styles to the VBox */
 VBox {
     -fx-alignment: center;
     -fx-spacing: 20.0;
@@ -9,10 +8,15 @@ VBox {
     -fx-background-size: cover; /* Adjust to your needs */
 }
 
-/* Apply styles to the Label */
 #welcomeText {
     -fx-text-fill: #333333;
     -fx-font-size: 26.0;
+}
+
+#explainText {
+    -fx-text-fill: #333333;
+    -fx-font-size: 26.0;
+    -fx-text-fill: #ffffff;
 }
 
 /* Apply styles to the TextFields */
@@ -20,17 +24,21 @@ VBox {
     -fx-font-size: 14px;
     -fx-padding: 5px;
     -fx-prompt-text-fill: #888888; /* Placeholder text color */
-    -fx-pref-width: 300px;
+    -fx-width: 20px;
+    -fx-background-color: rgba(255, 255, 255, 0.8);
 }
 
-/* Apply styles to the Button */
+/* Apply styles to all buttons */
 .button {
-    -fx-font-size: 16px;
-    -fx-padding: 8px 16px;
-    -fx-background-color: #ececec; /* Green */
-    -fx-text-fill: #0e0e0e;
+    -fx-text-fill: rgb(66, 66, 66);
+    -fx-background-color: rgba(255, 255, 255, 0.8);
+    -fx-border-color: rgb(243, 243, 243);
+    -fx-border-width: 1px;
+    -fx-padding: 11px 22px;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-font-size: medium;
 }
-
 /* Apply styles to the Label for search results */
 #searchFor {
     -fx-font-size: 16px;
@@ -43,6 +51,8 @@ VBox {
     -fx-padding: 5px;
     -fx-pref-width: 300px;
     -fx-pref-height: 200px;
+    -fx-background-color: rgba(255, 255, 255, 0.7);
+    -fx-background-radius: 10px;
 }
 
 /* Apply styles to the TextField for ratings */
@@ -53,13 +63,13 @@ VBox {
     -fx-pref-width: 300px;
 }
 
-/* Apply styles to the Save Movie Button */
-#onSaveMovie {
+
+#confirmSave{
     -fx-font-size: 16px;
     -fx-padding: 8px 16px;
-    -fx-background-color: #336699; /* Blue */
     -fx-text-fill: white;
 }
 
-/* Apply GaussianBlur effect to the VBox */
+
+
 
